fixed subcontent spacing issue

--- a/new.css
+++ b/new.css
@@ -61,6 +61,7 @@ hr {
     width: 90%;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 3%;
     padding: 1%;
     border: dashed;
     border-color: grey;
